--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+  <title>Welcome cv</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <h1>Hello friend<br> my name Alexey</h1>
+    </div>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-list__item"><a href="#summary" class="nav-list__link">Summary</a></li>
+        <li class="nav-list__item"><a href="#contacts" class="nav-list__link">Contacts</a></li>
+        <li class="nav-list__item"><a href="#skills" class="nav-list__link">Skills</a></li>
+        <li class="nav-list__item"><a href="#code" class="nav-list__link">Code</a></li>
+        <li class="nav-list__item"><a href="#education" class="nav-list__link">Education</a></li>
+        <li class="nav-list__item"><a href="#english" class="nav-list__link">English</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main">
+    <div class="container main-container">
+      <section class="section main-summary" id="summary">
+        <h2 class="section-title">Alexey</h2>
+      </section>
+      <section class="section main-contacts" id="contacts">
+        <h2 class="section-title">Contacts</h2>
+      </section>
+      <section class="section main-skills" id="skills">
+        <h2 class="section-title">Skills</h2>
+      </section>
+      <section class="section main-code" id="code">
+        <h2 class="section-title">Code</h2>
+      </section>
+      <section class="section main-education" id="education">
+        <h2 class="section-title">Education</h2>
+      </section>
+      <section class="section main-english" id="english">
+        <h2 class="section-title">English</h2>
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container"></div>
+  </footer>
 </body>
 </html>
