feat: add block aducation

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
         </section>
         <section class="section main-education" id="education">
           <h2 class="section-title">Education</h2>
+          <ul class="main-education__list">
+            <li class="main-education__item university">Baikal State University - Faculty of Management</li>
+            <li class="main-education__item course-html">Course HTML Academy</li>
+            <li class="main-education__item course-rs">Course RS school </li>
+          </ul>
         </section>
         <section class="section main-english" id="english">
           <h2 class="section-title">English</h2>
