--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link
       rel="shortcut icon"
       href="./assets/img/favicon.ico"
@@ -42,13 +44,13 @@
             <a href="#code" class="nav-list__link code">Code</a>
           </li>
           <li class="nav-list__item">
-            <a href="#contacts" class="nav-list__link contacts">Contacts</a>
-          </li>
-          <li class="nav-list__item">
             <a href="#education" class="nav-list__link education">Education</a>
           </li>
           <li class="nav-list__item">
             <a href="#english" class="nav-list__link english">English</a>
+          </li>
+          <li class="nav-list__item">
+            <a href="#contacts" class="nav-list__link contacts">Contacts</a>
           </li>
         </ul>
       </div>
@@ -125,9 +127,15 @@
         </section>
         <section class="section main-english" id="english">
           <h2 class="section-title">English</h2>
+          <span class="main-english__logo">A1+</span>
         </section>
         <section class="section main-contacts" id="contacts">
           <h2 class="section-title">Contacts</h2>
+          <ul class="main-contacts__list">
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <li><a href="" class="fa fa-github"></a></li>
+            <li><a href="" class="fa fa-envelope"></a></li>
+          </ul>
         </section>
       </div>
     </main>
