feat: add footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="section main-summary" id="summary">
           <div class="main-summary__title">
             <img class="logo" src="./assets/img/mylogo.jpg" alt="photo" />
-            <h2 class="section-title">Alexey Popov <br />Frontend developer</h2>
+            <h1 class="section-title">Alexey Popov <br />Frontend developer</h1>
           </div>
           <p>
             I am 23 years old, I live in the city of Rostov-on-Don. Back in
@@ -124,23 +124,36 @@
             <li class="main-education__item course-html">Course HTML Academy</li>
             <li class="main-education__item course-rs">Course RS school </li>
           </ul>
+          <div class="project">
+          <h2 class="section-title">Click to Project</h2>
+          <a href="https://alexeypopov183.github.io/momentum/" class="fa fa-folder-open fa-2x" target="_blank"></a> 
+        </div>
         </section>
         <section class="section main-english" id="english">
           <h2 class="section-title">English</h2>
           <span class="main-english__logo">A1+</span>
         </section>
         <section class="section main-contacts" id="contacts">
+        <div class="main-contacts__container">
           <h2 class="section-title">Contacts</h2>
           <ul class="main-contacts__list">
-            <li><a href="#" class="fa fa-facebook"></a></li>
-            <li><a href="" class="fa fa-github"></a></li>
-            <li><a href="" class="fa fa-envelope"></a></li>
+            <li><a href="https://t.me/alexey_loo" class="fa fa-telegram fa-2x" target="_blank"></a></li>
+            <li><a href="https://github.com/alexeypopov183" class="fa fa-github fa-2x" target="_blank"></a></li>
+            <li><a href="mailto:mail@alexeypopov183@gmail.com" class="fa fa-envelope fa-2x" target="_blank"></a></li>
           </ul>
+        </div>
         </section>
       </div>
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer-menu">
+        <h3>2022</h3>
+        <a href="https://rs.school/">
+          <img src="./assets/img/rs.png" class="footer-menu__rs-link" alt="logo-rs" >
+        </a>
+      </div>
+      </div>
     </footer>
   </body>
 </html>
