feat: add link github

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-menu">
+          <a href="https://github.com/alexeypopov183">Github</a>
         <h3>2022</h3>
         <a href="https://rs.school/">
           <img src="./assets/img/rs.png" class="footer-menu__rs-link" alt="logo-rs" >
